remove common .h and .c files generic int and float to_key functions removed from the library generic int and float to_key functions in their own file now

--- a/meson.build
+++ b/meson.build
@@ -12,7 +12,7 @@ phtree_dependencies = [
 ]
 
 demo_1d_files = [
-  'source/32bit/phtree32_common.c',
+  #'source/32bit/phtree32_common.c',
   'source/32bit/phtree32_1d.c',
   'examples/demo_1d.c',
 ]
@@ -25,7 +25,7 @@ demo_1d_binary = executable (
 )
 
 demo_2d_spatial_files = [
-  'source/32bit/phtree32_common.c',
+  #'source/32bit/phtree32_common.c',
   'source/32bit/phtree32_2d.c',
   'examples/demo_2d_spatial_hash.c',
 ]
@@ -38,7 +38,7 @@ demo_2d_spatial_binary = executable (
 )
 
 demo_2d_simple_files = [
-  'source/32bit/phtree32_common.c',
+  #'source/32bit/phtree32_common.c',
   'source/32bit/phtree32_2d.c',
   'examples/demo_2d_simple.c',
 ]
@@ -51,7 +51,7 @@ demo_2d_simple_binary = executable (
 )
 
 demo_3d6d_files = [
-  'source/32bit/phtree32_common.c',
+  #'source/32bit/phtree32_common.c',
   'source/32bit/phtree32_3d.c',
   'source/32bit/phtree32_6d.c',
   'examples/demo_3d6d.c',
